<resources>
    <string name="app_name">随手记</string>
    <!-- 启动界面 -->
    <string name="title_welcome">先赚他一个小目标！</string>
    <!-- 登录界面 -->
    <string name="login_title">用户登录</string>
    <string name="hint_uid">请输入您的用户名</string>
    <string name="uid_logo_description">账号logo</string>
    <string name="hint_password">请输入您的密码</string>
    <string name="password_logo_description">密码logo</string>
    <string name="login_button">登录</string>
    <string name="goto_register">还没有账号？前去注册</string>
    <!-- 注册界面  -->
    <string name="register_title">注册账号</string>
    <string name="text_uid">账&#8195;号：</string>
    <string name="text_password">密&#8195;码：</string>
    <string name="register_button">注册</string>
    <string name="goto_login">已有账号，前去登录</string>
    <!-- 主界面 -->
    <string name="title_activity_main">随手记</string>
    <string name="title_bill">明细</string>
    <string name="title_add">记一笔</string>
    <string name="title_setting">设置</string>
    <!--设置界面-->
    <string name="set_1">记账日报</string>
    <string name="set_2">记账月报</string>
    <string name="text_share">把随手记推荐给朋友</string>
    <string name="text_attention">开启后，你将在每天上午接收记账日报，在每月1号上午接收记账月报。</string>
    <string name="share_logo_description">分享</string>
    <string name="text_clear">清空记录</string>
    <string name="clear_logo_description">清空</string>
    <string name="text_advice">反馈和建议</string>
    <!--记账界面 -->
        <!-- 备注-->
        <string name="title_note">添加备注</string>
    <!--日历对话框-->
    <string name="date_separete">:</string>
    <string name="date_input_hint">请输入时间（24小时制）</string>

    <string name="cancel">取消</string>
    <string name="ensure">确定</string>
</resources>