<?xml version="1.0" encoding="utf-8"?>

<!--  登录界面布局  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_loginLogo"
            android:layout_width="360dp"
            android:layout_height="360dp"
            android:layout_marginHorizontal="45dp"
            android:layout_marginTop="-40dp"
            android:background="@drawable/login_logo"
            android:gravity="center"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tv_loginTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="-60dp"
            android:gravity="center|center_horizontal"
            android:text="@string/login_title"
            android:textColor="#5768C5"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <ImageView
                android:id="@+id/iv_loginUid"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="0"
                android:contentDescription="@string/uid_logo_description"
                app:srcCompat="@drawable/account" />

            <EditText
                android:id="@+id/et_loginUid"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="username"
                android:ems="10"
                android:hint="@string/hint_uid"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <ImageView
                android:id="@+id/iv_loginPass"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/password_logo_description"
                app:srcCompat="@drawable/password" />

            <EditText
                android:id="@+id/et_loginPass"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="60dp">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login_button"
                android:textSize="18sp"
                app:backgroundTint="#4757AE"
                app:cornerRadius="50dp" />
s
            <Button
                android:id="@+id/btn_gotoRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:gravity="center"
                android:text="@string/goto_register"
                android:textColor="#737171" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>