<?xml version="1.0" encoding="utf-8"?>

<!--备注界面的布局-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/white">
    <TextView
        android:id="@+id/tv_note_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_note"
        android:textSize="16sp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/et_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_note_title"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="14sp"
        android:background="@color/white">
        <requestFocus/>
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/et_note"
        android:padding="10dp">
        <Button
            android:id="@+id/btn_note_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:layout_marginRight="5dp"/>
        <Button
            android:id="@+id/btn_note_ensure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ensure"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginRight="5dp"/>
    </LinearLayout>

</RelativeLayout>