<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <DatePicker
        android:id="@+id/dp_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/date_input_hint" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <EditText
                android:id="@+id/et_hour"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/date_separete"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_minute"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_calendar_cancel"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="#00000000"
            android:text="@string/cancel"
            android:textColor="@color/green" />

        <Button
            android:id="@+id/btn_calendar_ensure"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="#00000000"
            android:text="@string/ensure"
            android:textColor="@color/green" />
    </LinearLayout>

</LinearLayout>